ios bug squashed!

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,5 +1,3 @@
-
-
 // begin header
 header {
   position: fixed;
@@ -18,8 +16,11 @@ nav {
   padding-top: 2em;
   position: absolute;
   transform: scale(1, 0);
+  -webkit-transform: scale (1,0);
   transform-origin: top;
+  -webkit-transform-origin: top;
   transition: transform 400ms ease-in-out;
+  -webkit-transition: transform 400ms ease-in-out;
   background-color: #36454F;
   border-bottom: 0.3em solid #FFFFF0;
   // border-right: 0.3em solid #FFFFF0;
@@ -29,10 +30,12 @@ nav {
   max-width: 5em;
   opacity: 1;
   transition: opacity 150ms ease-in-out;
+  -webkit-transition: opacity 150ms ease-in-out
 }
 
 .nav-toggle:checked ~ nav {
   transform: scale(1, 1);
+  -webkit-transform: scale(1, 1)
 }
 
 .nav-toggle {
@@ -92,16 +95,19 @@ nav a, nav img {
   text-transform: uppercase;
   opacity: 0;
   transition: opacity 150ms ease-in-out;
+  -webkit-transition: opacity 150ms ease-in-out
 }
 
 .nav-toggle:checked ~ nav a, .nav-toggle:checked ~ nav img {
   opacity: 1;
   transition: opacity 250ms ease-in-out 250ms;
+  -webkit-transition: opacity 250ms ease-in-out 250ms
 }
 
 .nav-toggle:checked ~ #headerLogoTwo {
   opacity: 0;
   transition: opacity 250ms ease-in-out 150ms;
+  -webkit-transition: opacity 250ms ease-in-out 150ms;
 }
 
 @media screen and (min-width: 1136px) {
@@ -149,9 +155,12 @@ nav a, nav img {
     right: 0;
     transform: scale(0, 1);
     transition: transform ease-in-out 250ms;
+    -webkit-transform: scale(0, 1);
+    -webkit-transition: transform ease-in-out 250ms;
   }
   nav a:hover::before {
     transform: scale(1, 1);
+    -webkit-transform: scale(1, 1);
   }
 }
 // end header
